2006-03-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/fiid.c, libfreeipmi/include/freeipmi/fiid.h
	(fidd_template_compare): New function.
	
2006-03-02  Anand Babu  <ab@zresearch.com>

	* doc/freeipmi.texi: fixed syntax errors that prevented PDF
	creation. 
	
	* doc/authors.texi: fixed email address to evade spammers.

2006-03-02  Albert Chu <chu11@llnl.gov>

	* Globally rename ipmi_lan_check_session_authcode to
	ipmi_lan_check_session_authentication_code.

	* libfreeipmi/src/fiid.c (_fiid_obj_block_len): Removed function.

	* libfreeipmi/src/fiid.c, libfreeipmi/include/freeipmi/fiid.h
	(fiid_obj_block_len, fiid_obj_block_len_bytes): New functions.

	* common/src/fiid-wrappers.h (FIID_OBJ_BLOCK_LEN,
	FIID_OBJ_BLOCK_LEN_BYTES, FIID_OBJ_BLOCK_LEN_BYTES_CLEANUP,
	FIID_OBJ_DUP, FIID_OBJ_DUP_CLEANUP,
	FIID_OBJ_TEMPLATE_COMPARE_CLEANUP): New wrappers.

2006-03-01  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Clear objects before setting in all fill functions.
	
2006-02-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-lan-interface.h,
	libfreeipmi/src/ipmi-lan-interface.c: Split off some code into
	ipmi-lan.h, ipmi-lan.c, ipmi-lan-utils.h, and ipmi-lan-utils.c.

	* libfreeipmi/include/freeipmi/ipmi-kcs-interface.h,
	libfreeipmi/src/ipmi-kcs-interface.c: Split off some code into
	ipmi-kcs.h and ipmi-kcs.c.

	* libfreeipmi/src/rmcp.c, libfreeipmi/include/freeipmi/rmcp.h
	(ipmi_rmcp_check_message_tag): Reverse parameters for consistency
	to other functions.

	* libfreeipmi/src/rmcp.h, libfreeipmi/src/rmcp.c: Split
	off some code into rmcp-utils.h and rmcp-utils.c.

	* libfreeipmi/src/ipmi-messaging-support-cmds.h
	(IPMI_MAX_AUTHENTICATION_CODE_LENGTH): Move define to ipmi-lan.h.
	
	* Globally re-adjust code for new files, includes, and define locations.

	* libfreeipmi/src/ipmi-error.c, libfreeipmi/include/freeipmi/ipmi-error.h
	(ipmi_kcs_strstatus_r): Moved to ipmi-kcs-interface.c.

	* libfreeipmi/include/freeipmi/ipmi-kcs-interface.h,